# tracer_control_ros2

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/tracer_base/include/tracer_base/: tracer_messenger.hpp
install/tracer_base/lib/tracer_base/: tracer_base_node
install/tracer_base/share/ament_index/resource_index/package_run_dependencies/: tracer_base
install/tracer_base/share/ament_index/resource_index/parent_prefix_path/: tracer_base
install/tracer_base/share/tracer_base/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/tracer_base/share/tracer_base/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  tracer_baseConfig-version.cmake  tracer_baseConfig.cmake
install/tracer_base/share/tracer_base/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/tracer_base/share/tracer_base/launch/: tracer_base.launch
install/tracer_base/share/tracer_base/urdf/: agilex_tracer.urdf
install/tracer_msgs/include/tracer_msgs/tracer_msgs/msg/: rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  tracer_light_cmd.h  tracer_light_cmd.hpp  tracer_light_state.h  tracer_light_state.hpp  tracer_motor_state.h  tracer_motor_state.hpp  tracer_status.h  tracer_status.hpp  uart_tracer_motor_state.h  uart_tracer_motor_state.hpp  uart_tracer_status.h  uart_tracer_status.hpp
install/tracer_msgs/include/tracer_msgs/tracer_msgs/msg/detail/: tracer_light_cmd__builder.hpp  tracer_light_cmd__functions.h  tracer_light_cmd__rosidl_typesupport_fastrtps_c.h  tracer_light_cmd__rosidl_typesupport_fastrtps_cpp.hpp  tracer_light_cmd__rosidl_typesupport_introspection_c.h  tracer_light_cmd__rosidl_typesupport_introspection_cpp.hpp  tracer_light_cmd__struct.h  tracer_light_cmd__struct.hpp  tracer_light_cmd__traits.hpp  tracer_light_cmd__type_support.h  tracer_light_cmd__type_support.hpp  tracer_light_state__builder.hpp  tracer_light_state__functions.h  tracer_light_state__rosidl_typesupport_fastrtps_c.h  tracer_light_state__rosidl_typesupport_fastrtps_cpp.hpp  tracer_light_state__rosidl_typesupport_introspection_c.h  tracer_light_state__rosidl_typesupport_introspection_cpp.hpp  tracer_light_state__struct.h  tracer_light_state__struct.hpp  tracer_light_state__traits.hpp  tracer_light_state__type_support.h  tracer_light_state__type_support.hpp  tracer_motor_state__builder.hpp  tracer_motor_state__functions.h  tracer_motor_state__rosidl_typesupport_fastrtps_c.h  tracer_motor_state__rosidl_typesupport_fastrtps_cpp.hpp  tracer_motor_state__rosidl_typesupport_introspection_c.h  tracer_motor_state__rosidl_typesupport_introspection_cpp.hpp  tracer_motor_state__struct.h  tracer_motor_state__struct.hpp  tracer_motor_state__traits.hpp  tracer_motor_state__type_support.h  (+34 more)
install/tracer_msgs/share/ament_index/resource_index/package_run_dependencies/: tracer_msgs
install/tracer_msgs/share/ament_index/resource_index/parent_prefix_path/: tracer_msgs
install/tracer_msgs/share/ament_index/resource_index/rosidl_interfaces/: tracer_msgs
install/tracer_msgs/share/tracer_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/tracer_msgs/share/tracer_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_tracer_msgs__rosidl_generator_cExport.cmake  export_tracer_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_tracer_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  tracer_msgsConfig-version.cmake  tracer_msgsConfig.cmake  tracer_msgs__rosidl_typesupport_cppExport.cmake  tracer_msgs__rosidl_typesupport_introspection_cExport.cmake  tracer_msgs__rosidl_typesupport_introspection_cppExport.cmake
install/tracer_msgs/share/tracer_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/tracer_msgs/share/tracer_msgs/msg/: TracerLightCmd.idl  TracerLightCmd.msg  TracerLightState.idl  TracerLightState.msg  TracerMotorState.idl  TracerMotorState.msg  TracerRsStatus.msg  TracerStatus.idl  TracerStatus.msg  UartTracerMotorState.idl  UartTracerMotorState.msg  UartTracerStatus.idl  UartTracerStatus.msg
install/ugv_sdk/share/ugv_sdk/: package.sh
log/: latest_build
src/tracer_ros/tracer_base/: CMakeLists.txt  package.xml
src/tracer_ros/tracer_base/include/tracer_base/: tracer_messenger.hpp
src/tracer_ros/tracer_base/launch/: tracer_base.launch
src/tracer_ros/tracer_base/src/: tracer_base_node.cpp  tracer_messenger.cpp
src/tracer_ros/tracer_msgs/: CMakeLists.txt
src/tracer_ros/tracer_msgs/install/: local_setup.sh  setup.sh
src/tracer_ros/tracer_msgs/install/tracer_msgs/share/tracer_msgs/: package.bash  package.zsh
src/tracer_ros/tracer_msgs/log/: latest_build
src/tracer_ros/tracer_msgs/msg/: TracerRsStatus.msg  TracerStatus.msg
src/ugv_sdk/: README.md
src/ugv_sdk/include/ugv_sdk/details/async_port/: async_can.hpp
src/ugv_sdk/sample/bunker_demo/: bunker_robot_demo.cpp
src/ugv_sdk/sample/hunter_demo/: hunter_robot_demo.cpp
src/ugv_sdk/sample/ranger_demo/: ranger_robot_demo.cpp
src/ugv_sdk/sample/scout_demo/: scout_mini_omni_demo.cpp  scout_robot_demo.cpp
src/ugv_sdk/sample/tracer_demo/: tracer_robot_demo.cpp
src/ugv_sdk/sample/utils_demo/: demo_protocol_detector.cpp  demo_robot_version.cpp
src/ugv_sdk/scripts/: bringup_can2usb_1m.bash  bringup_can2usb_500k.bash  setup_can2usb.bash
src/ugv_sdk/test/: scout_memory_check.cpp
src/ugv_sdk/test/python/: test_hunter_robot.py  test_ranger_robot.py  test_scout_robot.py
(+21 files in other folders)
